--- a/code/potus2016/2_retweet_network[ver2][info=1][topic=POTUS2016].ipynb
+++ b/code/potus2016/2_retweet_network[ver2][info=1][topic=POTUS2016].ipynb
@@ -449,7 +449,7 @@
    ],
    "source": [
     "# 将每个用户自己的文本合在一起\n",
-    "user_texts = rtwts_3media.groupby(by='author.username').agg(text=(\"text\", lambda x: \",\".join(set(x))))\n",
+    "user_texts = rtwts_3media.groupby(by='author.username').agg(text=(\"text\", lambda x: \" \".join(set(x)))) # ','改为' '\n",
     "user_texts.reset_index(drop=False, inplace=True)\n",
     "user_texts.to_csv(\"data/user_texts[restrict=kcore+3media+retweet][topic=POTUS2016].csv\", index=False)\n",
     "user_texts.info()"
