--- a/code/auxiliary/Perspective.ipynb
+++ b/code/auxiliary/Perspective.ipynb
@@ -48,20 +48,20 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 385956 entries, 0 to 385955\n",
+      "RangeIndex: 111783 entries, 0 to 111782\n",
       "Data columns (total 2 columns):\n",
       " #   Column           Non-Null Count   Dtype \n",
       "---  ------           --------------   ----- \n",
-      " 0   author.username  385956 non-null  object\n",
-      " 1   text             385955 non-null  object\n",
+      " 0   author.username  111783 non-null  object\n",
+      " 1   text             111783 non-null  object\n",
       "dtypes: object(2)\n",
-      "memory usage: 5.9+ MB\n"
+      "memory usage: 1.7+ MB\n"
      ]
     }
    ],
    "source": [
     "# 取用户推文数据\n",
-    "user_texts = pd.read_csv(\"data/user_texts[restrict=3media+retweet][topic=POTUS2020].csv\")\n",
+    "user_texts = pd.read_csv(\"data/user_texts[restrict=3media+retweet][topic=POTUS2016].csv\")\n",
     "user_texts.info()"
    ]
   },
@@ -77,7 +77,7 @@
     "\n",
     "def perspective_analyze(text):\n",
     "\n",
-    "    API_KEY = ''    # 写上自己的\n",
+    "    API_KEY = 'AIzaSyAPlZbUYD2pYxmz_CsDPUe5vNIQFiGlxS0'\n",
     "\n",
     "    client = discovery.build(\n",
     "        \"commentanalyzer\",\n",
@@ -107,12 +107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "f066ac54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = user_texts"
+    "df = user_texts\n",
+    "df['perspective_api_results'] = ''  # 添加结果列或者清空结果列"
    ]
   },
   {
@@ -150,8 +151,7 @@
     "begin = 0   # 开始的位置\n",
     "chunk = 500   # 分批处理，每批的数量\n",
     "chunk_10 = chunk * 10   # 每10批输出一次进度\n",
-    "df['perspective_api_results'] = ''\n",
-    "result_file = \"data/perspective_api_results[restrict=3media+retweet][topic=POTUS2020].csv\"\n",
+    "result_file = \"data/perspective_api_results[restrict=3media+retweet][topic=POTUS2016].csv\"\n",
     "\n",
     "for i in range(begin, df.shape[0], chunk): # df.shape[0]\n",
     "    tmp = parallel_analyze(list(df.loc[i:i+chunk, :]['text']), analyze_text, n_workers=4)   # 线程数量\n",
