--- a/code/auxiliary/Perspective.ipynb
+++ b/code/auxiliary/Perspective.ipynb
@@ -77,7 +77,7 @@
     "\n",
     "def perspective_analyze(text):\n",
     "\n",
-    "    API_KEY = ''\n",
+    "    API_KEY = ''    # 填上自己的\n",
     "\n",
     "    client = discovery.build(\n",
     "        \"commentanalyzer\",\n",
